# garage-ai

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 57600d74bdd3_create_repair_jobs_table.py  be03afd72ca3_create_customers_table.py  d748532275ef_create_vehicles_table.py  dbcef7dc493d_create_users_table.py
app/: main.py
app/ai/: openai_service.py
app/api/v1/: ai.py  auth.py  customers.py  repair_jobs.py  vehicles.py
app/auth/: current_user.py  dependencies.py  jwt.py
app/core/: config.py
app/database/: database.py  dependencies.py
app/models/: customer.py  repair_job.py  user.py  vehicle.py
app/repositories/: customer_repository.py  repair_job_repository.py  user_repository.py  vehicle_repository.py
app/schemas/: customer.py  repair_job.py  user.py  vehicle.py
app/services/: auth_service.py  customer_service.py  repair_job_service.py  vehicle_service.py
app/static/css/: style.css
app/static/js/: api.js  app.js  customers.js  login.js  register.js  repair_jobs.js  ui.js  vehicles.js
app/templates/: base.html  customers.html  dashboard.html  login.html  register.html  repair_jobs.html  vehicles.html
app/web/: routes.py
